# gitbutlerapp--gitbutler

apps/desktop/src/lib/forge/github/: githubPrService.ts
apps/web/src/lib/components/projects/: ProjectIndexCard.svelte
apps/web/src/routes/repositories/: +page.svelte
crates/but-cli/src/: args.rs  main.rs
crates/but-cli/src/command/: mod.rs
crates/but-workspace/: Cargo.toml
crates/but-workspace/src/: integrated.rs  lib.rs
crates/gitbutler-stack/src/: stack.rs
