[package]
name = "but-workspace"
version = "0.0.0"
edition = "2021"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bstr.workspace = true
gix = { workspace = true, features = [
    "dirwalk",
    "credentials",
    "parallel",
    "serde",
    "status",
] }
gitbutler-id.workspace = true
gitbutler-stack.workspace = true
