[package]
name = "but-workspace"
version = "0.0.0"
edition = "2021"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bstr.workspace = true
git2.workspace = true
itertools = "0.14"
gix = { workspace = true, features = [
    "dirwalk",
    "credentials",
    "parallel",
    "serde",
    "status",
    "revision"
] }
gitbutler-id.workspace = true
gitbutler-stack.workspace = true
gitbutler-command-context.workspace = true
gitbutler-repo.workspace = true
gitbutler-commit.workspace = true
gitbutler-oxidize.workspace = true
